bug fixes, process bar upgrade, /help command finished

--- a/somnus/locales/de.json
+++ b/somnus/locales/de.json
@@ -5,22 +5,22 @@
             "response": "Pong!"
         },
         "start": {
-            "description": "Startet den Server",
+            "description": "Startet den Server.",
             "msg_above_process_bar": "Server startet ...",
             "finished_msg": "Server gestartet!",
             "error": {
                 "general": "Server konnte nicht gestartet werden\n-# ERROR: {e}",
-                "already_running": "Server läuft bereits"
+                "already_running": "Server läuft bereits."
             }
         },
         "stop": {
-            "description": "Stoppt den Server",
+            "description": "Stoppt den Server.",
             "msg_above_process_bar": "Server stoppt ...",
             "finished_msg": "Server gestoppt!",
             "error": {
                 "general": "Sever konnte nicht gestoppt werden\n-# ERROR: {e}",
-                "already_stopped": "Server bereits gestoppt",
-                "mc_already_stopped": "Minecraft-Server bereits gestoppt",
+                "already_stopped": "Server bereits gestoppt.",
+                "mc_already_stopped": "Minecraft-Server bereits gestoppt.",
                 "players_online": {
                     "stop_anyway": "Stoppe trotzdem",
                     "cancel": "Abbruch",
@@ -33,28 +33,28 @@
             } 
         },
         "add_world": {
-            "description": "SUPER-USER-ONLY: Erstellt eine neue Referenz auf eine bereits installierte Minecraft-Installation",
+            "description": "SUPER-USER-ONLY: Erstellt eine neue Referenz auf eine bereits installierte Minecraft-Installation.",
             "success": "Die Welt '{display_name}' wurde erfolgreich erstellt!",
             "error": "Die Welt '{display_name}' konnte nicht erstellt werden! | {e}"
         },
         "edit_world": {
-            "description": "SUPER-USER-ONLY: Ändert die Referenz auf eine bereits installierte Minecraft-Installation",
+            "description": "SUPER-USER-ONLY: Ändert die Referenz auf eine bereits installierte Minecraft-Installation.",
             "success": "Die Welt '{editing_world_name}' wurde erfolgreich verändert! Die neuen Werte sind:{values}",
             "edit_error": "Die Welt '{editing_world_name}' konnte nicht verändert werden | {e}"
         },
         "delete_world": {
-            "description": "SUPER-USER-ONLY: Löscht eine Referenz auf eine bereits installierte Minecraft-Installation",
+            "description": "SUPER-USER-ONLY: Löscht eine Referenz auf eine bereits installierte Minecraft-Installation.",
             "success": "Die Referenz auf die Welt '{display_name}' wurde erfolgreich gelöscht!",
             "canceled": "Löschprozess abgebrochen",
             "verification": "Bist du dir sicher, dass du die Referenz auf die Welt '{display_name}' läschen willst?{values}",
             "error": {
                 "current_world": "Du kannst die aktuell ausgewählte Welt nicht löschen. Wechsle die Welt mit /change_world und starte den Server neu",
                 "not_found": "Welt '{display_name}' wurde nicht gefunden.",
-                "button_inactive": "Button inaktiv, nutze /delete_world erneut"
+                "button_inactive": "Button inaktiv, nutze /delete_world erneut."
             }   
         },
         "change_world": {
-            "description": "Ändert die aktuelle Welt in eine andere verfügbare Welt",
+            "description": "Ändert die aktuelle Welt in eine andere verfügbare Welt.",
             "placeholder": "Wähle die Welt aus, die du spielen möchtest",
             "response": "Wähle die Welt aus, die du spielen möchtest:",
             "success_offline": "'{selected_value}' wurde erfolgreich ausgewählt!",
@@ -67,7 +67,7 @@
             "cancel": "Abbruch"
         },
         "show_worlds": {
-            "description": "Zeigt alle verfügbaren Welten an"
+            "description": "Zeigt alle verfügbaren Welten an."
         },
         "stop_without_shutdown": {
             "description": "SUPER-USER-ONLY: Stoppt den Minecraft-Server, allerdings nicht den Host-Server.",
@@ -75,7 +75,7 @@
             "finished_msg": "Server ohne herunterfahren gestoppt!"
         },
         "restart": {
-            "description": "Startet den Minecraft-Server neu, nicht den gesamten Server",
+            "description": "Startet den Minecraft-Server neu, nicht den gesamten Server.",
             "error": "Der Server ist gestoppt. Nutze /start um ihn zu starten!",
             "finished_msg": "Server wurde neugestartet!",
             "above_process_bar": {
@@ -86,23 +86,25 @@
         },
         "reset_busy": {
             "description": "Falls der Bot fälschlicherweise beschäftigt ist, kann dieser Befehl den falschen Busy-State zurücksetzen.",
-            "verification": "Möchtest du wirklich den Busy-State zurücksetzen? Dadurch können Fehler entstehen, die bis zum Absturz des Bots führen können",
-            "success": "Der Busy-State wurde erfolgreich zurückgesetzt",
-            "canceled": "Das Zurücksetzen des Busy-States wurde abgebrochen",
+            "verification": "Möchtest du wirklich den Busy-State zurücksetzen? Dadurch können Fehler entstehen, die bis zum Absturz des Bots führen können.",
+            "success": "Der Busy-State wurde erfolgreich zurückgesetzt.",
+            "canceled": "Das Zurücksetzen des Busy-States wurde abgebrochen.",
             "reset": "Reset",
             "cancel": "Abrruch",
             "error": {
-                "general": "Der Bot ist aktuell nicht beschäftigt. Fehler können nicht behoben werden",
+                "general": "Der Bot ist aktuell nicht beschäftigt. Fehler können nicht behoben werden.",
                 "wrong_user": "Du kannst das Menü von Anderen nicht verwenden. Nutze selbst /reset_busy um Busy-State  zurückzusetzen."
             }
         },
         "help": {
             "description": "Zeigt alle relevanten Befehle von diesem Bot mit Erklärung an.",
-            "title": "Relevante Befehle"
+            "title": "Relevante Befehle",
+            "user_subtitle": ":baby: User-Befehle",
+            "admin_subtitle": ":man_technologist: Admin-Befehle"
         }
     },
     "permission": {
-        "busy": "Bitte warte bis die aktuelle Aktion beendet wurde",
+        "busy": "Bitte warte bis die aktuelle Aktion beendet wurde!",
         "sudo": "Du bist nicht dazu berechtigt diesen Befehl zu nutzen. Frage deinen System-Administrator für Änderungen."
     },
     "status": {
@@ -134,9 +136,10 @@
             "end": "```"
         },
         "help": {
-            "command": "`/{command_name}`:",
+            "command": "`/{command_name}`",
             "command_description": "{description}",
-            "subtitle": "{subtitle}"
+            "subtitle": "{subtitle}",
+            "admin_prefix_to_remove": "SUPER-USER-ONLY: "
         }
     }
 }
