--- a/somnus/locales/en.json
+++ b/somnus/locales/en.json
@@ -34,31 +34,31 @@
     },
     "add_world": {
       "description": "SUPER-USER-ONLY: Creates a new reference to an installed Minecraft installation.",
-      "success": "The world '{display_name}' was created succesfully!",
-      "error": "Couldn't create the world '{display_name}' | {e}"
+      "success": "The world `{display_name}` was created succesfully!",
+      "error": "Couldn't create the world `{display_name}` | {e}"
     },
     "edit_world": {
       "description": "SUPER-USER-ONLY: Edits the reference to an installed Minecraft installation.",
-      "success": "The world '{editing_world_name}' was edited succesfully! New values are:{values}",
-      "edit_error": "Couldn't edit the world '{editing_world_name}' | {e}"
+      "success": "The world `{editing_world_name}` was edited succesfully! New values are:{values}",
+      "edit_error": "Couldn't edit the world `{editing_world_name}` | {e}"
     },
     "delete_world": {
       "description": "SUPER-USER-ONLY: Deletes a reference to an installed Minecraft installation.",
-      "success": "The reference to the world '{display_name}' was deleted successfully!",
+      "success": "The reference to the world `{display_name}` was deleted successfully!",
       "canceled": "Deletion process canceled.",
-      "verification": "Are you shure to delete the world '{display_name}'?{values}",
+      "verification": "Are you shure to delete the world `{display_name}`?{values}",
       "error": {
         "current_world": "You can't delete the current world. Change the current world with /change_world and restart the server.",
-        "not_found": "World '{display_name}' not found.",
+        "not_found": "World `{display_name}` not found.",
         "button_inactive": "Button inactive, use /delete_world again."
       }
     },
     "change_world": {
       "description": "Changes the current world into another available world.",
       "placeholder": "Choose the world you want to play",
-      "response": "Choose the world you want to play:",
-      "success_offline": "'{selected_value}' was selected successfully!",
-      "success_online": "'{selected_value}' was successfully selected and will be started at the next start.\nWould you like to restart now?",
+      "response": "`{current_selected_world}` is currently selected. Choose the world you want to play:",
+      "success_offline": "`{selected_value}` was selected successfully!",
+      "success_online": "`{selected_value}` was successfully selected and will be started at the next start.\nWould you like to restart now?",
       "wrong_user_error": "You cannot use the menu because it was requested by someone else. Use /change_world to change the world.",
 
       "restart_now": "Restart Now",
@@ -129,11 +129,11 @@
   },
   "status": {
     "text": {
-      "online": "'{world_name}' ({players_online}/{max_players} online)",
-      "starting": "'{world_name}' soon",
-      "stopping": "of '{world_name}' was stopped",
-      "offline": "to /start to play '{world_name}'",
-      "only_host_online": "to /start to play '{world_name}'"
+      "online": "`{world_name}` ({players_online}/{max_players} online)",
+      "starting": "`{world_name}` soon",
+      "stopping": "of `{world_name}` was stopped",
+      "offline": "to /start to play `{world_name}`",
+      "only_host_online": "to /start to play `{world_name}`"
     },
     "activity": {
       "online": "Game",
