add somnus version to /ping command

--- a/somnus/locales/de.json
+++ b/somnus/locales/de.json
@@ -2,7 +2,7 @@
   "commands": {
     "ping": {
       "description": "Antwortet mit Pong!",
-      "response": "Pong!"
+      "response": "Pong!\n-# Somnus {version}"
     },
     "start": {
       "description": "Startet den Server.",
